--- a/src/css/pages/pronosticador.less
+++ b/src/css/pages/pronosticador.less
@@ -4,4 +4,20 @@ body.page--pronosticador {
   .header .navbar-right {
     display: none;
   }
+
+
+  footer.footer {
+    @media (max-width: @screen-sm) {
+      .top-footer {
+        .left-column, .right-column {
+          display: block;
+        }
+      }
+
+      .container {
+        width: 100%;
+        min-width: initial;
+      }
+    }
+  }
 }
